--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,11 +12,11 @@
 					<table>
 						<tr>
 							<td>user name:</td>
-							<td><input type="text" name="username" value="admin"></td>
+							<td><input type="text" name="username" value="admin1"></td>
 						</tr>
 						<tr>
 							<td>password:</td>
-							<td><input type="password" name="password" value="admin"></td>
+							<td><input type="password" name="password" value="admin1"></td>
 						</tr>
 						<tr>
 							<td><input type="submit" name="submit" value="Login"></td>
